# MKL-Eigs-for-Sparse-Matrices

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  MKL_Eigs_for_Sparse_Matrices.cbp  Makefile  README.md  cmake_install.cmake  main.cpp
output/: drops2math.wls  eig.nb  eig.wls  eigs.wls  math2tex.nb  patch.nb
output/LaTeX/: P1P1_table.tex  P2P1_table.tex  bibl.bib  computational_results_for_trace_FEM_for_the_surface_stokes_problem.tex  sphere_2_P1P1_h=0.104167_table.tex  sphere_2_P1P1_normals=P2_shift=0.0h_conv_table.tex  sphere_2_P1P1_shift=0.0h_conv_table.tex  sphere_2_P2P1_consistent_h=0.104167_table.tex  sphere_2_P2P1_consistent_table.tex  sphere_2_P2P1_normals=exact_shift=0.0h_conv_table.tex  sphere_2_P2P1_normals=exact_shift=0.0h_iters_table.tex  sphere_2_P2P1_patchnormals=0_shift=0.0_form=consistent_m=12_rhofac=1_rhopow=-1_conv_table.tex  sphere_2_P2P1_patchnormals=0_shift=0.0_form=consistent_m=12_rhofac=1_rhopow=-1_iters_table.tex  sphere_2_P2P1_patchnormals=0_shift=0.0_form=consistent_m=12_rhopfac=1_rhoppow=-1_rhoufac=1_rhoupow=-1_conv_table.tex  sphere_2_P2P1_patchnormals=0_shift=0.0_form=consistent_m=12_rhopfac=1_rhoppow=-1_rhoufac=1_rhoupow=-1_iters_table.tex  sphere_2_P2P1_patchnormals=0_shift=0.0_form=consistent_m=12_rhopfac=1_rhoppow=0_rhoufac=1_rhoupow=-1_conv_table.tex  sphere_2_P2P1_patchnormals=0_shift=0.0_form=consistent_m=12_rhopfac=1_rhoppow=0_rhoufac=1_rhoupow=-1_iters_table.tex  sphere_2_P2P1_patchnormals=0_shift=0.0_form=consistent_m=1_rhopfac=1_rhoppow=1_rhoufac=1_rhoupow=-1_conv_table.tex  sphere_2_P2P1_table.tex  (+9 more)
(+1134 files in other folders)
